fix(ui-features\buttons\dropdown-buttons.scss): fix dropdown button stretch issue #1877

--- a/src/app/pages/ui-features/buttons/dropdown-buttons/dropdown-button.component.scss
+++ b/src/app/pages/ui-features/buttons/dropdown-buttons/dropdown-button.component.scss
@@ -9,5 +9,12 @@
 
   nb-card-body {
     overflow: visible;
+
+    .dropdown-menu {
+      &.show {
+        width: auto;
+        min-width: 100%;
+      }
+    }
   }
 }
